fix text overflow

--- a/css/mobile/_3-skill-mobile.scss
+++ b/css/mobile/_3-skill-mobile.scss
@@ -28,6 +28,7 @@
             }
 
             .skill-text-wrapper{
+                height: 70%;
                 p{
                     font-size: 2.5vw;
                     margin-top: 10px;
